# SQaLe-Library

./: .gitignore  README.md  deserialize_sqale.py  pyproject.toml
sqale/: __init__.py  deserialize.py
tests/: conftest.py  test_cli.py  test_import.py
